--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <nav class="navigation">
                 <ul class="site-nav list">
                     <li class="site-nav-item">
-                        <a href="" class=" link current">Студия</a>
+                        <a href="" class=" link current effect">Студия</a>
                     </li>
                     <li class="site-nav-item">
                         <a href="./portfolio.html" class=" link">Портфолио</a>
@@ -116,12 +116,16 @@
                 <ul class="description-pictures list">
                     <li class="description-pictures-item">
                         <img src=" ./images/whatwedo1.jpg" alt="работа на клавиатуре" width="370" height="294" />
+                        <p class="description-pictures-text-overlay">Десктопные приложения</p>
+
                     </li>
                     <li class="description-pictures-item">
                         <img src="./images/whatwedo2.jpg" alt="телефон в руке" width="370" height="294" />
+                        <p class="description-pictures-text-overlay">Мобильные приложения</p>
                     </li>
                     <li class="description-pictures-item">
                         <img src="./images/whatwedo3.jpg" alt="палитра цветов на планшете" width="370" height="294" />
+                        <p class="description-pictures-text-overlay">Дизайнерские решения</p>
                     </li>
                 </ul>
             </div>
