--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
                         <a href="./index.html" class=" link ">Студия</a>
                     </li>
                     <li class="site-nav-item">
-                        <a href="./portfolio.html" class=" link current">Портфолио</a>
+                        <a href="./portfolio.html" class=" link current effect">Портфолио</a>
                     </li>
                     <li class="site-nav-item">
                         <a href="" class=" link">Контакты</a>
@@ -65,92 +65,146 @@
                 </ul>
                 <ul class="galery-images list">
                     <li class="galery-item"><a href="" class="galery-link link">
-                            <img src="./images/portfolio1.jpg" alt="Компьютер" width="370" height="294">
+                            <div class="galery-images-box">
+                                <img src="./images/portfolio1.jpg" alt="Компьютер" width="370" height="294">
+                                <p class="galery-images-overlay">Ресурс предлагает комплексные предложения с разным
+                                    уровнем функционала и сервисов.
+                                    Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="galery-wrapper">
                                 <h2 class="galery-images-name">Технокряк</h2>
                                 <p class="galery-images-description">Веб-сайт</p>
-                                <p></p>
+
                             </div>
                         </a>
                         </li">
                     <li class="galery-item"><a href="" class="galery-link link">
-                            <img src="./images/portfolio2.jpg" alt="Баскетболисты" width="370" height="294">
+                            <div class="galery-images-box">
+                                <img src="./images/portfolio2.jpg" alt="Баскетболисты" width="370" height="294">
+                                <p class="galery-images-overlay">Ресурс предлагает комплексные предложения с разным
+                                    уровнем функционала и сервисов.
+                                    Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="galery-wrapper">
                                 <h2 class="galery-images-name">Постер New Orlean vs Golden Star</h2>
                                 <p class="galery-images-description">Дизайн</p>
-                                <p></p>
+
                             </div>
 
                         </a>
 
                     </li>
                     <li class="galery-item"><a href="" class="galery-link link">
-                            <img src="./images/portfolio3.jpg" alt="Логотип-рыба" width="370" height="294">
+                            <div class="galery-images-box">
+                                <img src="./images/portfolio3.jpg" alt="Логотип-рыба" width="370" height="294">
+                                <p class="galery-images-overlay">Ресурс предлагает комплексные предложения с разным
+                                    уровнем функционала и сервисов.
+                                    Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице.
+                                </p>
+                            </div>
                             <div class="galery-wrapper">
                                 <h2 class="galery-images-name">Ресторан Seafood</h2>
                                 <p class="galery-images-description">Приложение</p>
-                                <p>
-                                </p>
+
                             </div>
 
                         </a>
                     </li>
                     <li class="galery-item"><a href="" class="galery-link link">
-                            <img src="./images/portfolio4.jpg" alt="Наушники" width="370" height="294">
+                            <div class="galery-images-box">
+                                <img src="./images/portfolio4.jpg" alt="Наушники" width="370" height="294">
+                                <p class="galery-images-overlay">Ресурс предлагает комплексные предложения с разным
+                                    уровнем функционала и сервисов.
+                                    Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="galery-wrapper">
                                 <h2 class="galery-images-name">Проект Prime</h2>
                                 <p class="galery-images-description">Маркетинг</p>
-                                <p></p>
+
                             </div>
 
                         </a>
                     </li>
                     <li class="galery-item"><a href="" class="galery-link link">
-                            <img src="./images/portfolio5.jpg" alt="Две коробки" width="370" height="294">
+                            <div class="galery-images-box">
+                                <img src="./images/portfolio5.jpg" alt="Две коробки" width="370" height="294">
+                                <p class="galery-images-overlay">Ресурс предлагает комплексные предложения с разным
+                                    уровнем функционала и сервисов.
+                                    Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="galery-wrapper">
                                 <h2 class="galery-images-name">Проект Boxes</h2>
                                 <p class="galery-images-description">Приложение</p>
-                                <p></p>
+
                             </div>
 
                         </a>
                     </li>
                     <li class="galery-item"><a href="" class="galery-link link">
-                            <img src="./images/portfolio6.jpg" alt="Монитор" width="370" height="294">
+                            <div class="galery-images-box">
+                                <img src="./images/portfolio6.jpg" alt="Монитор" width="370" height="294">
+                                <p class="galery-images-overlay">Ресурс предлагает комплексные предложения с разным
+                                    уровнем функционала и сервисов.
+                                    Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="galery-wrapper">
                                 <h2 class="galery-images-name">Inspiration has no Borders</h2>
                                 <p class="galery-images-description">Веб-сайт</p>
-                                <p></p>
+
                             </div>
 
                         </a>
                     </li>
                     <li class="galery-item"><a href="" class="galery-link link">
-                            <img src="./images/portfolio7.jpg" alt="Открытый журнал" width="370" height="294">
+                            <div class="galery-images-box">
+                                <img src="./images/portfolio7.jpg" alt="Открытый журнал" width="370" height="294">
+                                <p class="galery-images-overlay">Ресурс предлагает комплексные предложения с разным
+                                    уровнем функционала и сервисов.
+                                    Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="galery-wrapper">
                                 <h2 class="galery-images-name">Издание Limited Editionт</h2>
                                 <p class="galery-images-description">Дизайн</p>
-                                <p></p>
+
                             </div>
 
                         </a>
                     </li>
                     <li class="galery-item"><a href="" class="galery-link link">
-                            <img src="./images/portfolio8.jpg" alt="Бирка" width="370" height="294">
+                            <div class="galery-images-box">
+                                <img src="./images/portfolio8.jpg" alt="Бирка" width="370" height="294">
+                                <p class="galery-images-overlay">Ресурс предлагает комплексные предложения с разным
+                                    уровнем функционала и сервисов.
+                                    Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="galery-wrapper">
                                 <h2 class="galery-images-name">Проект LAB</h2>
                                 <p class="galery-images-description">Маркетинг</p>
-                                <p></p>
+
                             </div>
 
                         </a>
                     </li>
                     <li class="galery-item"><a href="" class="galery-link link">
-                            <img src="./images/portfolio9.jpg" alt="Работа за компьютером" width="370" height="294">
+                            <div class="galery-images-box">
+                                <img src="./images/portfolio9.jpg" alt="Работа за компьютером" width="370" height="294">
+                                <p class="galery-images-overlay">Ресурс предлагает комплексные предложения с разным
+                                    уровнем функционала и сервисов.
+                                    Все это позволит посетителю получить
+                                    исчерпывающие сведения о компании или частном лице.</p>
+                            </div>
                             <div class="galery-wrapper">
                                 <h2 class="galery-images-name">Growing Business</h2>
                                 <p class="galery-images-description">Приложение</p>
-                                <p></p>
+
                             </div>
 
                         </a>
