--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <section class="hero">
             <div class="container">
                 <h1 class="main-title">Эффективные решения <br>для вашего бизнеса</h1>
-                <button type="button" class="main-button">Заказать услугу</button>
+                <button type="button" class="main-button" data-modal-open>Заказать услугу</button>
             </div>
         </section>
         <section class="text section">
@@ -320,64 +320,73 @@
 
             </div>
         </section>
-        <footer class="adress">
-            <div class="container footer-container">
-
-                <div>
-                    <a lang="en" href="" class="logo logo-footer"><span class="logo-accent">Web</span>Studio</a>
-                    <address>
-                        <ul class="adress-list list">
-                            <li class="adress-list-item"><a href="https://goo.gl/maps/Eq5jRLe5XYkMgJvZ7"
-                                    class="adress-item map link">г. Киев, пр-т
-                                    Леси
-                                    Украинки,
-                                    26</a></li>
-                            <li class="adress-list-item"><a href="mailto:info@devstudio.com"
-                                    class="adress-item contacts link">info@devstudio.com</a>
-                            </li>
-                            <li class="adress-list-item"><a href="tel:+380961111111"
-                                    class="adress-item contacts link">+38
-                                    096 111 11 11</a></li>
-                        </ul>
-                    </address>
-                </div>
-                <div class="invent">
-                    <p class="invent-footer">Присоединяйтесь</p>
-                    <ul class="social-list list">
-                        <li class="social-list-item">
-                            <a class="social-list-link link-footer link" href=""><svg class="social-list-icon"
-                                    width="20" height="20">
-                                    <use href="./images/icons.svg#icon-instagram"></use>
-                                </svg></a>
-                        </li>
-                        <li class="social-list-item">
-                            <a class="social-list-link link-footer link" href=""><svg class="social-list-icon"
-                                    width="20" height="20">
-                                    <use href="./images/icons.svg#icon-twitter"></use>
-                                </svg></a>
-                        </li>
-                        <li class="social-list-item">
-                            <a class="social-list-link link-footer link" href=""><svg class="social-list-icon"
-                                    width="20" height="20">
-                                    <use href="./images/icons.svg#icon-facebook"></use>
-                                </svg></a>
-                        </li>
-                        <li class="social-list-item">
-                            <a class="social-list-link link-footer link" href=""><svg class="social-list-icon"
-                                    width="20" height="20">
-                                    <use href="./images/icons.svg#icon-linkedin"></use>
-                                </svg></a>
-                        </li>
-                    </ul>
-
-                </div>
-            </div>
-        </footer>
     </main>
+    <footer class="adress">
+        <div class="container footer-container">
+
+            <div>
+                <a lang="en" href="" class="logo logo-footer"><span class="logo-accent">Web</span>Studio</a>
+                <address>
+                    <ul class="adress-list list">
+                        <li class="adress-list-item"><a href="https://goo.gl/maps/Eq5jRLe5XYkMgJvZ7"
+                                class="adress-item map link">г. Киев, пр-т
+                                Леси
+                                Украинки,
+                                26</a></li>
+                        <li class="adress-list-item"><a href="mailto:info@devstudio.com"
+                                class="adress-item contacts link">info@devstudio.com</a>
+                        </li>
+                        <li class="adress-list-item"><a href="tel:+380961111111" class="adress-item contacts link">+38
+                                096 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div class="invent">
+                <p class="invent-footer">Присоединяйтесь</p>
+                <ul class="social-list list">
+                    <li class="social-list-item">
+                        <a class="social-list-link link-footer link" href=""><svg class="social-list-icon" width="20"
+                                height="20">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg></a>
+                    </li>
+                    <li class="social-list-item">
+                        <a class="social-list-link link-footer link" href=""><svg class="social-list-icon" width="20"
+                                height="20">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg></a>
+                    </li>
+                    <li class="social-list-item">
+                        <a class="social-list-link link-footer link" href=""><svg class="social-list-icon" width="20"
+                                height="20">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg></a>
+                    </li>
+                    <li class="social-list-item">
+                        <a class="social-list-link link-footer link" href=""><svg class="social-list-icon" width="20"
+                                height="20">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg></a>
+                    </li>
+                </ul>
+
+            </div>
+        </div>
+    </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="modal-close-btn" data-modal-close>
+                <svg class="modal-close-icon" width="18" height="18">
+                    <use href="./images/icons.svg#close-icon"></use>
+                </svg>
+            </button>
+
+        </div>
+    </div>
 
 
-
-
+    <script src="./js/modal.js"></script>
 
 </body>
 
